--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "catalog:",
     "express": "^5.1.0",
+    "resend": "^6.9.1",
     "stripe": "^17.6.0",
     "zod": "catalog:"
   },
