--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,6 +15,7 @@
     "@tatame-monorepo/db": "workspace:*",
     "@tatame-monorepo/env": "workspace:*",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "catalog:",
     "express": "^5.1.0",
     "resend": "^6.9.1",
