--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,7 +7,8 @@
     "check-types": "tsc -b",
     "compile": "bun build --compile --minify --sourcemap --bytecode ./src/index.ts --outfile server",
     "dev": "tsx watch src/index.ts",
-    "start": "node dist/index.mjs"
+    "start": "node dist/index.mjs",
+    "migrate:clerk": "tsx scripts/migrate-clerk-users.ts"
   },
   "dependencies": {
     "@clerk/express": "^1.4.5",
